reducer周りの便利メソッドを実装

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsup src/index.ts --format cjs,esm --dts --tsconfig tsconfig.build.json",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --watch --tsconfig tsconfig.build.json",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "test": "vitest",
@@ -26,6 +29,7 @@
     "format": "prettier --write \"**/*.{md,json,yaml,yml}\"",
     "format:check": "prettier --check \"**/*.{md,json,yaml,yml}\"",
     "typecheck": "tsc --noEmit",
+    "typecheck:build": "tsc --noEmit --project tsconfig.build.json",
     "prepare": "husky"
   },
   "keywords": [
@@ -43,11 +47,13 @@
     "@eslint/js": "^9.35.0",
     "@types/node": "^24.3.1",
     "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.35.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-n": "^17.21.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
+    "tsup": "^8.5.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.42.0",
     "vitest": "^3.2.4"
